--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@ img {
 		    
 
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<br>
-<p style="color:red;"><b><u>NOTE: We are currently making some major changes to adjust to new Colorado Laws! Please expect website and phone downtime as well as delay in responses. Email us for quickest response at info@seoulaliber.com and we will try to get back to you as soon as possible. We apologize for the inconvenience :( . </u></b></p>
+<p style="color:red;"><b><u>NOTE: We are currently making some major changes to adjust to new Colorado laws! We are still open to the public while under construction/relocation. Please expect website and phone downtime as well as delay in responses. We apologize for the inconvenience :( . </u></b></p>
 
 <ul><b>HB24-1349:</b> Effective 04/01/2025, an additional 6.5% excise tax has been implemented on the net taxable sales of firearm dealers, firearms, firearms manufacturers, and ammunition vendors (vendors) from the retail sale of any firearm, firearm precursor part, or ammunition in Colorado. See https://leg.colorado.gov/bills/hb24-1349 for additional details.
 </ul>
@@ -476,7 +476,9 @@ for (i = 0; i < coll.length; i++) {
 <footer>
 	<p><b><u>Contact Us</u></b> <br>
    11590 E 2nd Ave, Aurora, CO 80010 <br>
-	  We are currently running by Appointment only. <br>
+    Monday - Friday: 8AM-5PM <br>
+		Saturday: 9AM-12PM <br>
+		Sunday: Closed <br>
  Call or Text: (720) 515-4314<br>
      Email: info@seoulcaliber.com
   </p>
