--- a/index.html
+++ b/index.html
@@ -134,44 +134,47 @@ img {
             <p>
               Located in the most diverse city in the state of Colorado, we are the most diverse firearm retailer! We offer a comprehensive range of services including Firearm Transfers and Sales, Gunsmithing, Consultations, Safety Training, and Notary Services in English, Spanish, Korean, Vietmanese, and Mandarin. <br>
 		    <h1><u>Brands/u></h1>
-		    <u> Aero Precision </u>
-<u> Anderson Manufacturing </u>
-<u> Apex Tactical </u>
-<u> Armaspec </u>
-<u> Ballistic Advantage </u>
-<u> Bear Creek Arsenal </u>
-<u> B5 Systems </u>
-<u> Can Cannon </u>
-<u> Centurion Arms </u>
-<u> CMMG </u>
-<u> Dogtra </u>
-<u> DPMS </u>
-<u> Franklin Armory </u>
-<u> Geissele Automatics  </u>
-<u> Glock </u>
-<u> Hiperfire </u>
-<u> Hogue </u>
-<u> JP Rifles </u>
-<u> KAK Industry </u>
-<u> KKM Precision </u>
-<u> Leapers </u>
-<u> LMT Defense </u>
-<u> Lone Wolf Arms </u>
-<u> Luth-AR </u>
-<u> Magpul </u>
-<u> Odin Works </u>
-<u> Palmetto State Armory </u>
-<u> Primary Arms Optics </u>
-<u> Rainier Arms </u>
-<u> Rock River Arms </u>
-<u> Rosco Manufacturing </u>
-<u> Sig Sauer </u>
-<u> SLR Rifleworks </u>
-<u> Spikes Tactical </u>
-<u> Superlative Arms </u>
-<u> Timney Triggers </u>
-<u> Volquartsen </u>
+ Aero Precision <br> 
+ Anderson Manufacturing <br>
+ Apex Tactical <br>
+ Armaspec <br>
+ Ballistic Advantage <br>
+ Bear Creek Arsenal <br>
+ B5 Systems <br>
+ Can Cannon <br>
+ Centurion Arms <br>
+ CMMG <br>
+ Dogtra <br>
+ DPMS <br>
+ Franklin Armory <br>
+ Geissele Automatics  <br>
+ Glock <br>
+ Hiperfire <br>
+ Hogue <br>
+ JP Rifles <br>
+ KAK Industry <br>
+ KKM Precision <br>
+ Leapers <br>
+ LMT <br>
+ Lone Wolf Arms <br>
+ Luth-AR <br>
+ Magpul <br>
+ Odin Works <br>
+ Palmetto State Armory <br>
+ Primary Arms Optics <br>
+ Rainier Arms <br>
+ Rock River Arms <br>
+ Rosco Manufacturing <br>
+ Sig Sauer <br>
+ SLR Rifleworks <br>
+ Spikes Tactical <br>
+ Superlative Arms <br>
+ Timney Triggers <br>
+ Volquartsen <br>
 and many more! 
+
+
+
 
 
 
