--- a/index.html
+++ b/index.html
@@ -133,23 +133,27 @@ img {
             <h2>About</h2>
             <p>
               Located in the most diverse city in the state of Colorado, we are the most diverse firearm retailer! We offer a comprehensive range of services including Firearm Transfers and Sales, Gunsmithing, Consultations, Safety Training, and Notary Services in English, Spanish, Korean, Vietmanese, and Mandarin. <br>
-		    <h1><u>Brands/u></h1>
+		    <h1><u>Brands</u></h1>
  Aero Precision <br> 
  Anderson Manufacturing <br>
  Apex Tactical <br>
  Armaspec <br>
  Ballistic Advantage <br>
+		    Bravo Company <br>
  Bear Creek Arsenal <br>
+		    Beretta <br>
  B5 Systems <br>
  Can Cannon <br>
  Centurion Arms <br>
+		    CMC <br>
  CMMG <br>
  Dogtra <br>
  DPMS <br>
+		    Fab Defense <br>
  Franklin Armory <br>
  Geissele Automatics  <br>
  Glock <br>
- Hiperfire <br>
+ Hiperfire <br>	    
  Hogue <br>
  JP Rifles <br>
  KAK Industry <br>
@@ -163,13 +167,17 @@ img {
  Palmetto State Armory <br>
  Primary Arms Optics <br>
  Rainier Arms <br>
+		    Relentless Arms <br>
  Rock River Arms <br>
  Rosco Manufacturing <br>
+		    Ruger <br>
  Sig Sauer <br>
  SLR Rifleworks <br>
+		    Smith&Wesson <br>
  Spikes Tactical <br>
  Superlative Arms <br>
  Timney Triggers <br>
+		    Toolcraft <br>
  Volquartsen <br>
 and many more! 
 
