--- a/index.html
+++ b/index.html
@@ -102,8 +102,9 @@ img {
 		    
 
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<br>
-<p style="color:red;"><b><u> UNDER CONSTRUCTION - NOTE: We are currently making some major changes to adjust to new Colorado laws! Please expect website and phone downtime as well as delay in responses. We apologize for the inconvenience :( . </u></b></p>
-
+<p style="color:red;"><b><u> UNDER CONSTRUCTION - NOTE: We are currently making some major changes to adjust to new Colorado laws! Please expect website and phone downtime as well as delay in responses. We apologize for the inconvenience :( . Please contact us prior to placing an online order for transfer. </u></b></p>
+<ul><b>SB25-003:</b>Signed into law on April 10, 2025, will go into effect on August 1, 2026. This bill mandates safety training and permits for purchasing high-powered firearms that accept detachable magazines. It also prohibits the sale and purchase of rapid-fire conversion devices like bump stocks. See https://leg.colorado.gov/bills/sb25-003 for additional details.
+</ul>
 <ul><b>HB24-1349:</b> Effective 04/01/2025, an additional 6.5% excise tax has been implemented on the net taxable sales of firearm dealers, firearms, firearms manufacturers, and ammunition vendors (vendors) from the retail sale of any firearm, firearm precursor part, or ammunition in Colorado. See https://leg.colorado.gov/bills/hb24-1349 for additional details.
 </ul>
 <ul><b>SB23-169:</b> Effective 08/07/2023, Previous law allowed a person 18 tyears of age or older possess or purchase a firearm (shotgun or longun). This law increased age to legally purchase a firearm to 21 years of age or older. Exceptions included active members of US armed forces or peace office/ certified P.O.S.T. board. See https://leg.colorado.gov/bills/sb23-169 for additional details.
