--- a/index.html
+++ b/index.html
@@ -103,6 +103,10 @@ img {
 
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<br>
 <p style="color:red;"><b><u> UNDER CONSTRUCTION - NOTE: We are currently making some major changes to adjust to new Colorado laws! Please expect website and phone downtime as well as delay in responses. We apologize for the inconvenience :( . Please contact us prior to placing an online order for transfer. Transfers starting at $50. </u></b></p>
+<ul><b>SB25-034:</b>Signed into law on May 14, 2025, a person may voluntarily waive the right to purchase a firearm. See https://leg.colorado.gov/bills/sb25-034 for additional details.
+</ul>
+<ul><b>HB25-1250:</b>Signed into law on May 13, 2025, Effectove January 2024, and annually, each local education provider will provide materials about gun violence prevention to parents with students K-12 in a written or electronic format to students parents and guardians, as well as on the education providers website. See https://leg.colorado.gov/bills/hb25-1250 for additional details.
+</ul>
 <ul><b>SB25-003:</b>Signed into law on April 10, 2025, will go into effect on August 1, 2026. This bill mandates safety training and permits for purchasing high-powered firearms that accept detachable magazines. It also prohibits the sale and purchase of rapid-fire conversion devices like bump stocks. See https://leg.colorado.gov/bills/sb25-003 for additional details.
 </ul>
 <ul><b>HB24-1349:</b> Effective 04/01/2025, an additional 6.5% excise tax has been implemented on the net taxable sales of firearm dealers, firearms, firearms manufacturers, and ammunition vendors (vendors) from the retail sale of any firearm, firearm precursor part, or ammunition in Colorado. See https://leg.colorado.gov/bills/hb24-1349 for additional details.
@@ -117,7 +121,7 @@ img {
 </ul>
 <ul><b>HB24-1174:</b> Starting 07/01/2025, the requirements for obtaining a concealed carry permit will change mandating mandates that training classes to qualify for a concealed carry permit offer at least eight hours of instruction, including a live-fire test where participants shoot at least 50 rounds. Passing the live-fire test, as well as a written exam, will also be mandatory to get a concealed carry permit. See https://leg.colorado.gov/bills/hb24-1174 for additional details. 
 </ul>
-		    
+	    
 
 
 
