--- a/index.html
+++ b/index.html
@@ -102,6 +102,10 @@ img {
 		    
 
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<br>
+<p style="color:red;"><b>NOTE: We will be closed/out of office: June 13th, 2025 - June 16th, 2025. </b>
+
+	</p>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<br>
 <p style="color:red;"><b><u> UNDER CONSTRUCTION - NOTE: We are currently making some major changes to adjust to new Colorado laws! Please expect website and phone downtime as well as delay in responses. We apologize for the inconvenience :( . Please contact us prior to placing an online order for transfer. Transfers starting at $50. </u></b></p>
 <ul><b>SB25-034:</b>Signed into law on May 14, 2025, a person may voluntarily waive the right to purchase a firearm. See https://leg.colorado.gov/bills/sb25-034 for additional details.
 </ul>
