--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ img {
 		    
 
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<br>
-<p style="color:red;"><b>NOTE: We will be closed/out of office: June 16th, 2025 - June 22nd, 2025. </b>
+<p style="color:red;"><b>NOTE: We will be closed/out of office: June 23rd 2025 - June 30th, 2025. </b>
 
 	</p>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<br>
