--- a/index.html
+++ b/index.html
@@ -93,11 +93,11 @@ img {
 
     <div id="container">
       <div class="inner">
-        <div id="content"> 
+        <div id="content"> Your local source for outdoor adventure, survival, and tactical gear — including firearms, K9 equipment, camping, hiking, and everyday carry essentials. We proudly support Law Enforcement, Military, Security, Veterans, and the greater community with a focus on safety, preparedness, and service. Shopping from out of state? We ship nationwide!
           
           <div id="home" class="content-region hide">
             <h2>Home</h2>
-            <p>We are Seoul Caliber LLC. Your #1 Sporting and Recreational Goods Retailer and Merchant Wholesale Distributor specializing in Firearms and all shooting related activites.. We provide local services and products to Law Enforcement, Security, Military, Veterans, and our local community. <br> Out of state and looking for the best deal online?? We ship!! <br>
+            <p>
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<br>  
 		    
 
